# akibara-v2

./: .env.example  .eslintrc.json  .gitignore  .gitleaksignore  .prettierignore  .prettierrc.json  .stylelintrc.json  AGENTS-COORDINATION.md  BACKLOG-2026-04-26.md  BACKLOG-2026-04-28.md  CLEANUP-PLAN-2026-04-26.md  PROMPT-CONTINUACION.md  PROMPT-INICIO-AKIBARA-V2.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  qa_log.md  seo_optimization_log.md
.claude/agents/: mesa-01-lead-arquitecto.md  mesa-02-tech-debt.md  mesa-03-performance-wp.md  mesa-04-mercadopago.md  mesa-05-accessibility.md  mesa-06-content-voz.md  mesa-07-responsive.md  mesa-08-design-tokens.md  mesa-09-email-qa.md  mesa-10-security.md  mesa-11-qa-testing.md  mesa-12-seo-tech.md  mesa-13-branding-observador.md  mesa-14-web-trends.md  mesa-15-architect-reviewer.md  mesa-16-php-pro.md  mesa-20-devops-deploy.md  (+6 more)
.github/: CODEOWNERS
audit/: AUDIT-SUMMARY-2026-04-26.md  CELL-DESIGN-2026-04-26.md  HANDOFF-2026-04-26.md  PROJECT-COMPLETE-2026-04-27.md  SPRINT-EXECUTION-GUIDE-2026-04-26.md  cleanup-report-2026-04-26.md
docs/: RUNBOOK-DESTRUCTIVO.md
mesa-output/: 12-seo-tech.md  22-wordpress-master.md  23-pm-sprint-planner.md  _input-gsc-data.md  orchestrator-council-validation.md  orchestrator-prod-validation.md  orchestrator-validation.md
scripts/: deploy.sh  monitor-post-deploy.sh  quality-gate.sh  smoke-prod.sh  sync-staging.sh  verify-via-mcp.sh
tools/orchestrator/: .env.example  .gitignore  README.md  pyproject.toml
tools/orchestrator/docs/: ARCHITECTURE.md  RUNBOOK.md
tools/orchestrator/src/orchestrator/: __init__.py  cli.py  config.py
tools/orchestrator/src/orchestrator/agents/: __init__.py  base.py  mind_master.py
tools/orchestrator/src/orchestrator/llm/: __init__.py  client.py
tools/orchestrator/src/orchestrator/messaging/: __init__.py  discord.py
tools/orchestrator/src/orchestrator/tasks/: __init__.py  models.py  queue.py
tools/orchestrator/tests/unit/: test_queue.py
(+442 files in other folders)
