[project]
name = "akibara-orchestrator"
version = "0.1.0"
description = "Multi-agent orchestrator autónomo para Akibara — coordina MIND-MASTER, THEME, SEO, QA agents"
authors = [{ name = "Akibara", email = "contacto@akibara.cl" }]
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.11"

dependencies = [
    "anthropic>=0.39",          # Anthropic Python SDK
    "pydantic>=2.5",            # Data validation
    "pydantic-settings>=2.0",   # .env config
    "fastapi>=0.110",           # Dashboard + webhook receivers
    "uvicorn[standard]>=0.27",  # ASGI server
    "sqlalchemy>=2.0",          # ORM
    "aiosqlite>=0.19",          # async SQLite
    "alembic>=1.13",            # DB migrations
    "apscheduler>=3.10",        # Cron jobs
    "structlog>=24.1",          # Structured logging
    "httpx>=0.27",              # HTTP client (Discord, Brevo, etc.)
    "python-dotenv>=1.0",       # .env loading
    "jinja2>=3.1",              # Dashboard templates
    "rich>=13.7",               # CLI pretty print
    "typer>=0.12",              # CLI framework
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx-mock>=0.13",
]

[project.scripts]
akibara-orch = "orchestrator.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/orchestrator", "src/dashboard"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
strict = true
python_version = "3.11"
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=orchestrator --cov-report=term-missing"
